assets/css/style.css
/*all pages*/

* {
    font-family: "Montserrat", sans-serif;

}

body {
    max-width: 100%;
    margin: 0;
}
.navbar{
    border-bottom: 1px solid #000000 !important;
}
.navbar-brand {
    font-weight: 500;
}

.navbar-nav .active a {
    color: #000000 !important;
}

.nav-item,
.nav-link {
    font-weight: 600;
    color: #000000;
}

#footer-body {
    /* position: relative; */
    margin-bottom: 0px;
    width: 100%;
    background-color: #000000;
    color: #ffffff;
}

#footer-body .row {
    height: 100px;
}

#footer-address a {
    text-decoration: none;
    color: #ffffff;
}

#footer-address a:hover {
    color: #d3d3d3;
}

.footer-content {
    margin-right: 10px;
    margin-left: 10px;
    /* padding-top: 10px; */
    font-weight: 500;
    letter-spacing: 1px;
}

#social-media-links i {
    margin-left: 0px;
    font-size: 20px;
    float: right;
    padding-left: 8px;
    padding-right: 8px;
    color: #ffffff;
}

#social-media-links i:hover {
    color: #d3d3d3;
}

/*home page*/

.lo-hero-image {
    width: 100%;
    margin-bottom: 100px;
    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../images/big-tree.jpg);/*colors taken from w3schools*/
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
    height: 500px;

}

.lo-hero-text {
    text-align: center;
    color: #ffffff;
    width: 100%;
    overflow: hidden;
    margin-right: 10px;
    margin-left: 10px;


}
.lo-hero-text h1{
    font-weight: 700;
    letter-spacing: 1.5px;
    font-size: 40px;
    margin-bottom: 30px;
}
.lo-hero-text p{
    font-weight: 500;
    letter-spacing: 1px;
    font-size: 16px;
    font-style: italic;

}



/* .lo-hero-image img {
    width: 100%;
    height: 600px;
    object-fit: cover;
    border: 2px solid#000000; */


/* crops the image on diffrent screen resolutions to mentain the aspect ratio */
/* } */



#previews {
    position: relative;

}

#previews .row {
    margin-bottom: 100px;
}

.lo-previews-images,
.previews-text {
    padding-left: 28px;
    padding-right: 28px;
    margin-bottom: 20px;
}

.previews-text {
    text-align: center;

}

.previews-text h1 {
    font-size: 16px;
    text-decoration: none;
}

.previews-text p {
    font-weight: 800;
    font-style: oblique;
}

/* .lo-previews-images{
    width: 60%;
    height: auto;
} */
.lo-previews-images img {
    width: 100%;
    height: auto;
    border-radius: 4px;
    border: 1px solid #000000;
}

.lo-article-quote {
    background-image: url("../images/nyuma.jpg");
    background-position: center;
    background-repeat: no-repeat;
    /* padding-top: 15px; */
    margin-top: 10px;
    width: 100%;
}

.lo-article-quote p {
    font-size: 30px;
    text-align: center;
    font-style: italic;
}
@media only screen and (min-width:768px){
    .lo-hero-text h1{
        font-size: 50px;
    }
    .lo-hero-text p{
        font-size: 18px;
    }
}
@media only screen and(min-width:992px) {
    .lo-hero-text h1{
        font-size: 60px;
    }
    .lo-hero-text p{
        font-size: 20px;
    }
    
}

/* Gallery page */
#image-gallery {
    margin-top: 100px;
    margin-bottom: 100px;
}

#gallery-row {
    /* this ideas were from https://www.youtube.com/watch?v=180p7GLmMyQ */
    display: flex;
    flex-wrap: wrap;
    width: 100%;
}

#image-gallery h1 {
    font-size: 38px;
    font-style: italic;
    color: rgb(44, 61, 28);
}

.gallery-column {
    /*used !important to overide the bootstrap "column" class*/
    flex: 100% !important;
    /*because they are 10 columns */
    width: auto !important;
    overflow: hidden !important;
    padding: 0 4px !important;
    width: 100% !important;
    height: 100% !important;
}

.gallery-column img {
    width: 100%;
    height: 100%;
    margin-top: 2%;
    cursor: pointer;

}


@media only screen and (min-width:680px) {
    #image-gallery {
        margin-left: 5%;
        margin-right: 5%;
    }

    .gallery-column {
        flex: 50% !important;
    }
}

@media only screen and (min-width:800px) {
    #image-gallery {
        margin-left: 5%;
        margin-right: 5%;
    }

    .gallery-column {
        flex: 33.3% !important;
    }
}

/* projects page */
.lo-project-page {
    margin-top: 100px;
}

.lo-video-size {
    width: 800px;
    height: auto;
}

#lo-video {
    width: 100%;

}

.lo-video-content p {
    font-size: 30px;
}

.lo-maps-route {
    position: relative;
    height: auto;
    width: 100%;
}

.gmap_canvas {
    overflow: hidden;
    background: none !important;
    height: auto;
    width: 100%;
}

#gmap_canvas {
    width: 100%;
}


.single-upcoming-events-area .upcoming-events-thumbnail img {
    height: auto;
    width: 100%;
    border-radius: 5px;
    padding-left: 15px;
}

.events-text .events-meta a {
    text-decoration: none;
    padding: 5px;
}

.find-out-more-btn {
    padding-top: 5px;
    padding-bottom: 5px;
}

/*sign-up and sign-in pages*/

#bg-body {
    background-image: url("../images/sipg.jpg");
    background-position: center;
    background-repeat: no-repeat;
    width: 100%;
}

#lo-signup-body {
    background-image: url(../images/gallery/30.jpg);
    background-position: center;
    background-repeat: no-repeat;
    width: 100%;
}

.lo-form {
    margin-top: 200px;
    margin-bottom: 200px;
}

.lo-form-bg {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
}

.lo-form-input label {
    display: none;
}

.lo-form-input input {
    color: #000000;
    font-weight: 600;
}

.lo-form-input p {
    color: #d3d3d3;
}

#sign-up {
    text-decoration: none;
}

.form-container {
    border: 1px solid;
    padding: 50px 60px;
}

.form-group {
    padding: 16px;
}

@media only screen and (max-width:770px) {
    .lg-devices {
        display: none;
    }
}

@media only screen and (min-width:718px) {
    .sm-devices {
        display: none;

    }
}

